fix: rm left align for input-nubmer when use column theme

--- a/style/web/components/input-number/_index.less
+++ b/style/web/components/input-number/_index.less
@@ -242,10 +242,6 @@
     border-radius: @border-radius;
   }
 
-  .@{inputCls}__inner {
-    text-align: left;
-  }
-
   .@{inputNumberCls}__decrease,
   .@{inputNumberCls}__increase {
     width: @input-number-right-button-width;
